Finished Modifying Lab 4

--- a/Lab3_intro.tex
+++ b/Lab3_intro.tex
@@ -15,6 +15,7 @@
 \setcounter{chapter}{2}
 
 \begin{document}
+
 \chapter{Measurement and Uncertainty II}
 \section*{Python You Should Know for This Chapter}
 \begin{itemize}
@@ -24,9 +25,9 @@
 Recommended reading: Introduction to Scientific Computing in Python, by Nelson and Zachreson; All of chapter 7, Basic Plotting
 \section*{Questions that you should be able to answer by the end of this chapter.}
 \begin{enumerate}
-\item What is $\frac{\partial}{\partial x} \frac{x^2}{yz}$
-\item What is $\frac{\partial}{\partial t} \frac{5}{t^2}$
-\item You want to find out how many moles ($N$) of an ideal gas are in a container.  You can measure its volume, $V$, temperature, $T$, and pressure, $P$.  You also know that those quantities are related to the number of moles through the ideal gas law:
+\item What is $\frac{\partial}{\partial x} \frac{x^2}{yz}$?
+\item What is $\frac{\partial}{\partial t} \frac{5}{t^2}$?
+\item You want to find out how many moles, $N$, of an ideal gas are in a container.  You can measure its volume, $V$, temperature, $T$, and pressure, $P$.  You also know that those quantities are related to the number of moles through the ideal gas law:
 \[PV=NRT\]
 where $R$ is the universal gas constant and has negligible uncertainty.  Write out a symbolic equation to calculate the number of moles of gas in the container and a separate equation for the uncertainty in your calculation.
 \end{enumerate}
