Now have compilable tex files for all chapters

--- a/Lab4_intro.tex
+++ b/Lab4_intro.tex
@@ -185,11 +185,7 @@ time it takes for the mass to travel through one full oscillation (so the
 mass, say, starts from the highest point and it returns to it's highest point)
 as the \emph{period} of oscillation and abbreviate it with the letter $T.$
 \begin{center}
-\includegraphics[
-natheight=1.248800in,
-natwidth=3.767100in,
-height=1.2842in,
-width=3.8156in
+\includegraphics[width=0.5\textwidth
 ]
 {Lab4_figs/massOnSpring.png}
 \end{center}
