--- a/Lab_Full_Manual.tex
+++ b/Lab_Full_Manual.tex
@@ -1,5 +1,5 @@
 \documentclass[twoside,11pt,ShortChapTitles]{BYUTextbook}
-
+\usepackage{epstopdf}
 \usepackage{soul}
 \renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
 \usepackage{siunitx}
@@ -8,6 +8,8 @@
   \usepackage{marginfix}
 
 \usepackage{mathtools}
+
+
 
 
 \setcounter{chapter}{0}
@@ -44,7 +46,7 @@
  \vfill
 
 
- {\footnotesize $\copyright$ 2018 R. Todd Lines and Matthew R. Zachreson
+ {\footnotesize $\copyright$ 2023 R. Todd Lines and Matthew R. Zachreson
                Brigham Young University--Idaho}
 
  \vskip.5truein
@@ -77,5 +79,9 @@
 \include{Lab2}
 \include{Lab3}
 \include{Lab4}
+\include{Lab5}
+\include{Lab6}
+%\include{Lab7}
+\include{Lab8}
 
 \end{document}
